# src/features/game/model/request/saveCardInfoGame.go
@@ -1,0 +1,14 @@
+package request
+
+type ReqSaveCardInfo struct {
+	Cards []CardInfo `json:"cards"`
+}
+
+type CardInfo struct {
+	Name          string `json:"name"`
+	Size          int    `json:"size"`
+	Habitat       string `json:"habitat"`
+	Nest          string `json:"nest"`
+	BeakDirection string `json:"beakDirection"`
+	Image         string `json:"image"`
+}
